Fixed long words breaking layout bug

--- a/compass/assets/scss/partials/_structure-layout.scss
+++ b/compass/assets/scss/partials/_structure-layout.scss
@@ -13,6 +13,8 @@
 .site-inner {
 	clear: both;
 	padding-top: 30px;
+	word-wrap: break-word;
+	word-break: normal;
 }
 
 /* Column Widths and Positions
